[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/textures/ui/player_hud/hud.png" type="Texture" id=1]
[ext_resource path="res://assets/textures/ui/player_hud/booster_hud.png" type="Texture" id=2]
[ext_resource path="res://assets/textures/ui/player_hud/hp_bar.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/ui/player_hud/ammo_bar.png" type="Texture" id=4]
[ext_resource path="res://assets/font/number_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/scripts/ui/player_hud/hp_ammo_weapons.gd" type="Script" id=6]
[ext_resource path="res://assets/textures/ui/player_hud/booster_bar_green.png" type="Texture" id=7]
[ext_resource path="res://assets/font/debug.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://assets/scenes/ui/hud/weapon_icon.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 5
outline_size = 1
outline_color = Color( 0, 0.156863, 0.34902, 1 )
font_data = ExtResource( 8 )

[node name="CanvasLayer" type="CanvasLayer"]

[node name="hp_ammo_weapon" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="hud_base" type="Sprite" parent="hp_ammo_weapon"]
position = Vector2( 20, 19 )
texture = ExtResource( 1 )
hframes = 2
frame = 1

[node name="health_bar" type="TextureProgress" parent="hp_ammo_weapon"]
margin_left = 11.0
margin_top = 18.0
margin_right = 37.0
margin_bottom = 23.0
value = 100.0
texture_progress = ExtResource( 3 )

[node name="health_label" type="Label" parent="hp_ammo_weapon"]
margin_left = 38.0
margin_top = 21.0
margin_right = 78.0
margin_bottom = 35.0
custom_colors/font_color_shadow = Color( 0, 0.156863, 0.34902, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 0
custom_fonts/font = ExtResource( 5 )
text = "50"

[node name="ammo_bar" type="TextureProgress" parent="hp_ammo_weapon"]
margin_left = 11.0
margin_top = 26.0
margin_right = 37.0
margin_bottom = 31.0
value = 100.0
texture_progress = ExtResource( 4 )

[node name="ammo_label" type="Label" parent="hp_ammo_weapon"]
margin_left = 38.0
margin_top = 29.0
margin_right = 78.0
margin_bottom = 43.0
custom_colors/font_color_shadow = Color( 0, 0.156863, 0.34902, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 0
custom_fonts/font = ExtResource( 5 )
text = "256"

[node name="booster_base" type="Sprite" parent="hp_ammo_weapon"]
position = Vector2( 295, 18 )
texture = ExtResource( 2 )
hframes = 3
vframes = 2
frame = 1

[node name="booster_bar" type="TextureProgress" parent="hp_ammo_weapon"]
margin_left = 293.0
margin_top = 15.0
margin_right = 333.0
margin_bottom = 55.0
max_value = 50.0
value = 50.0
texture_progress = ExtResource( 7 )
fill_mode = 3

[node name="t" type="Tween" parent="hp_ammo_weapon/booster_bar"]

[node name="player_pos" type="Label" parent="hp_ammo_weapon"]
margin_left = 2.0
margin_top = 37.0
margin_right = 46.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 1 )
text = "Player_Pos:"

[node name="fps" type="Label" parent="hp_ammo_weapon"]
margin_left = 2.0
margin_top = 44.0
margin_right = 46.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 1 )
text = "FPS:"

[node name="movement" type="Label" parent="hp_ammo_weapon"]
margin_left = 2.0
margin_top = 51.0
margin_right = 46.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 1 )
text = "Movement:"

[node name="weapons" type="HBoxContainer" parent="hp_ammo_weapon"]
margin_left = 7.0
margin_top = 10.0
margin_right = 240.0
margin_bottom = 50.0
rect_min_size = Vector2( 233, 0 )
custom_constants/separation = 10

[node name="icon" parent="hp_ammo_weapon/weapons" instance=ExtResource( 9 )]
margin_bottom = 40.0

[node name="icon2" parent="hp_ammo_weapon/weapons" instance=ExtResource( 9 )]
margin_left = 10.0
margin_right = 10.0
margin_bottom = 40.0

[node name="icon3" parent="hp_ammo_weapon/weapons" instance=ExtResource( 9 )]
margin_left = 20.0
margin_right = 20.0
margin_bottom = 40.0

[node name="icon4" parent="hp_ammo_weapon/weapons" instance=ExtResource( 9 )]
margin_left = 30.0
margin_right = 30.0
margin_bottom = 40.0

[node name="wt" type="Tween" parent="hp_ammo_weapon"]
